k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: morse-server
  namespace: morse-code
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - morse.stavco9.com
    secretName: morse-server-tls
  rules:
  - host: morse.stavco9.com
    http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: morse-server-release
          servicePort: 4000
